--- a/view/src/styles/common/header/Menu.module.css
+++ b/view/src/styles/common/header/Menu.module.css
@@ -88,6 +88,7 @@
     border-radius: 9px;
     background-color: rgb(0, 0, 0);
     border: none;
+    border-radius: 18px;
     color: white;
     transition: background-color .4s;
 }
