--- a/view/src/styles/homepage/hero_section/HeroSection.module.css
+++ b/view/src/styles/homepage/hero_section/HeroSection.module.css
@@ -42,11 +42,14 @@
 }
 
 .hero__section__join__us__button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-size: 1.3em;
-    width: 80%;
+    width: 70%;
     height: 29%;
     background-color: rgb(0, 0, 0);
-    border-radius: 8px;
+    border-radius: 18px;
     border: none;
     transition: background-color .4s;
     color: white;
