--- a/view/src/styles/internal/header/Header.module.css
+++ b/view/src/styles/internal/header/Header.module.css
@@ -5,7 +5,7 @@
     justify-content: space-between;
     width: 100%;
     height: 70px;
-    background-color: rgb(43, 61, 80);
+    background-image: linear-gradient(to top right, black, rgb(10, 10, 10) 70%);
 }
 
 .group__select {
@@ -18,7 +18,9 @@
     height: 50%;
     border-radius: 10px;
     text-align: center;
-    border: 0.2px solid rgb(190, 190, 190);
+    border: 1px solid rgba(66, 69, 78, 0.445);
+    background-color: white;
+    box-shadow: inset 0px 0px 2px rgba(45, 45, 49, 0.637);
     font-size: 1.01em;
     margin-right: 20px;
 }
@@ -41,15 +43,15 @@
     width: 150px;
     height: 100%;
     border-radius: 20px;
-    background-color: rgb(43, 61, 80);
+    background-color: rgb(10, 10, 10);
     font-size: 1.1em;
     color: white;
-    border: 0.1px solid rgba(255, 255, 255, 0.226);
+    border: 0.1px solid rgba(73, 73, 73, 0.096);
     transition: background-color .4s;
 }
 
 .join_group__button:hover {
-    background-color: rgb(46, 72, 100);
+    background-color: rgb(24, 23, 23);
 }
 
 .user__area {
