--- a/view/src/styles/internal/main/Main.module.css
+++ b/view/src/styles/internal/main/Main.module.css
@@ -2,32 +2,226 @@
     display: flex;
     gap: 4%;
     border: 1px solid black;
-    padding: 90px 20px 20px 20px;
+    padding: 110px 40px 40px 40px;
     height: 100%;
 }
 
 .todo__area, .doing__area, .done__area {
-    width: 300px;
+    min-width: 300px;
     height: 600px;
-    background-color: rgb(235, 235, 192);
-    box-shadow: inset 0px 0px 2px rgb(83, 83, 73);
+    background-color: transparent;
 }
 
 .description {
     color: white;
-    font-weight: bold;
+    font-weight: 600;
     font-size: 1.1em;
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
     height: 40px;
+    border-radius: 8px 8px 0px 0px;
+    margin-bottom: 6%;
 }
 
-.doing__area {
-
+.cards__area {
+    position: relative;
+    width: 100%;
+    height: calc(100% - 55.3px);
+    overflow-y: scroll;
+    padding: 3px;
 }
 
-.done__area {
+.card {
+    border-radius: 8px;
+    width: 100%;
+    height: 200px;
+    margin-bottom: 5%;
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.637);
+}
 
+.card:first-child {
+    margin-top: 5%;
+}
+
+.card__header {
+    width: 100%;
+    height: 20%;
+    border-radius: 8px 8px 0px 0px;
+    background-image: linear-gradient(to top right, rgb(32, 30, 46), rgb(21, 20, 27), rgb(17, 17, 22));
+    /* background-color: rgb(24, 24, 65); */
+}
+
+.card__content {
+    background-color: rgb(241, 241, 241);
+    width: 100%;
+    padding: 5px;
+    height: 80%;
+    border-radius: 0px 0px 8px 8px;
+}
+
+.card:hover {
+    
+}
+
+.funct__container {
+    min-width: 200px;
+    width: 20%;
+}
+
+.search__card__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 6%;
+    height: 140px;
+    background-image: linear-gradient(to right bottom, rgb(227, 234, 240), rgb(156, 169, 177));
+    box-shadow: 0px 0px 6px rgb(123, 124, 138);
+}
+
+.search__input__block {
+    display: flex;
+    padding: 0;
+    width: 80%;
+    height: 40px;
+    border-radius: 20px;
+    border: 1px solid rgba(66, 69, 78, 0.445);
+    background-color: white;
+    box-shadow: inset 0px 0px 2px rgba(45, 45, 49, 0.637);
+}
+
+.search__input {
+    height: 100%;
+    width: 85%;
+    margin: 0;
+    border-radius: 0px 13px 13px 0px;
+    border: none;
+    outline: 0;
+    padding: 5px;
+    font-size: 1.01em;
+    background-color: transparent;
+}
+
+.search__icon__block {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 15%;
+    height: 100%;
+    border-radius: 13px 0px 0px 13px;
+}
+
+.search__icon {
+    width: 25px;
+    height: 25px;
+    object-fit: cover;
+}
+
+.search__button {
+    width: 80%;
+    background-color: black;
+    color: white;
+    height: 40px;
+    border: none;
+    border-radius: 20px;
+    font-size: 1.01em;
+    transition: background-color .5s, transform .5s;
+}
+
+.search__button:hover, .add__button:hover {
+    cursor: pointer;
+    background-color:rgb(32, 30, 46);
+    transform: scale(1.009);
+    box-shadow: 0px 0px 4px rgba(32, 32, 34, 0.555);
+}
+
+.add__card__container {
+    width: 100%;
+    height: 300px;
+    margin-top: 20px;
+    background-image: linear-gradient(to right bottom, rgb(227, 234, 240), rgb(156, 169, 177));
+    box-shadow: 0px 0px 6px rgb(123, 124, 138);
+}
+
+.new__card__info {
+    display: flex;
+    width: 100%;
+    height: 60px;
+}
+
+.destination__block {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
+}
+
+.destination__label, .priority__label {
+    font-size: 0.95em;
+}
+
+.priority__block {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
+}
+
+.column__destination, .priority__select {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    appearance: none;
+    width: 80%;
+    text-align: center;
+    border-radius: 6px;
+    border: 1px solid rgba(66, 69, 78, 0.445);
+    background-color: white;
+    box-shadow: inset 0px 0px 2px rgba(45, 45, 49, 0.637);
+}
+
+.content__text__block {
+    display: flex;
+    flex-direction: column;
+    padding: 5%;
+}
+
+.context__text__label {
+    font-size: 0.95em;
+    margin-bottom: 3px;
+}
+
+.content__textarea {
+    outline: 0;
+    resize: none;
+    padding: 5px;
+    height: 130px;
+    border: 1px solid rgba(66, 69, 78, 0.445);
+    background-color: white;
+    box-shadow: inset 0px 0px 2px rgba(45, 45, 49, 0.637);
+}
+
+.add__button {
+    width: 90%;
+    height: 40px;
+    border: none;
+    border-radius: 20px;
+    font-size: 1.01em;
+    margin-left: 5%;
+    background-color: black;
+    color: white;
+    transition: background-color .5s, transform .5s;
+}
+
+.pop__up__container {
+    position: absolute;
+    width: 500px;
+    height: 400px;
+    border: 1px solid black;
+    background-color: white;
+    z-index: 999;
 }
