--- a/view/src/styles/common/go_to_home/GoToHomeButton.module.css
+++ b/view/src/styles/common/go_to_home/GoToHomeButton.module.css
@@ -7,11 +7,12 @@
     width: 160px;
     height: 40px;
     text-decoration: none;
-    color: black;
+    color: rgb(216, 210, 210);
 }
 
 .go__to__home:hover {
     cursor: pointer;
+    transform: scale(1.01);
 }
 
 .arrow__button__line__one, .arrow__button__line__two {
@@ -21,7 +22,7 @@
     width: 12%;
     height: 12%;
     border-radius: 8px;
-    background-color: black;
+    background-color: rgb(216, 210, 210);
     transform-origin: 0% 44%;
     transition: background-color .4s ;
 }
@@ -35,7 +36,7 @@
 }
 
 .go__to__home:hover .arrow__button__line__one,.go__to__home:hover .arrow__button__line__two {
-    background-color: rgb(255, 81, 0);
+    background-color: rgb(0, 0, 0);
 }
 
 .button__description {
@@ -45,5 +46,5 @@
 }
 
 .go__to__home:hover .button__description {
-    color: rgb(255, 81, 0);
+    color: rgb(0, 0, 0);
 }
