--- a/view/src/styles/common/header/Menu.module.css
+++ b/view/src/styles/common/header/Menu.module.css
@@ -90,12 +90,14 @@
     border: none;
     border-radius: 18px;
     color: white;
-    transition: background-color .4s;
+    transition: background-color .5s, transform .5s, box-shadow .5s;
 }
 
 .header__menu__signin__button:hover {
     cursor: pointer;
-    background-color: rgb(255, 60, 0);
+    background-color:rgb(32, 30, 46);
+    transform: scale(1.009);
+    box-shadow: 0px 0px 4px rgba(255, 255, 255, 0.555);
 }
 
 @media only screen and (max-width: 727px){
