--- a/view/src/styles/homepage/hero_section/HeroSection.module.css
+++ b/view/src/styles/homepage/hero_section/HeroSection.module.css
@@ -29,14 +29,12 @@
     width: 100%;
     font-size: 2.1em;
     color: white;
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.753);
 }
 
 .hero__section__main__content__text {
     height: 45%;
     width: 100%;
-    color: rgb(255, 255, 255);
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.685);
+    color: rgb(209, 215, 236);
     font-size: 1.01em;
     text-align: justify;
 }
@@ -51,13 +49,15 @@
     background-color: rgb(0, 0, 0);
     border-radius: 18px;
     border: none;
-    transition: background-color .4s;
+    transition: background-color .5s, transform .5s, box-shadow .5s;
     color: white;
 }
 
 .hero__section__join__us__button:hover {
     cursor: pointer;
-    background-color: rgb(255, 60, 0);
+    background-color: rgb(32, 30, 46);
+    transform: scale(1.009);
+    box-shadow: 0px 0px 4px rgba(255, 255, 255, 0.555);
 }
 
 @media only screen and (max-width: 727px) and (min-width: 459px){
