--- a/view/src/styles/internal/main/Main.module.css
+++ b/view/src/styles/internal/main/Main.module.css
@@ -29,7 +29,7 @@
     position: relative;
     width: 100%;
     height: calc(100% - 55.3px);
-    overflow-y: scroll;
+    overflow-y: auto;
     padding: 3px;
 }
 
@@ -86,7 +86,7 @@
     padding: 0;
     width: 80%;
     height: 40px;
-    border-radius: 20px;
+    border-radius: 10px;
     border: 1px solid rgba(66, 69, 78, 0.445);
     background-color: white;
     box-shadow: inset 0px 0px 2px rgba(45, 45, 49, 0.637);
@@ -125,7 +125,7 @@
     color: white;
     height: 40px;
     border: none;
-    border-radius: 20px;
+    border-radius: 10px;
     font-size: 1.01em;
     transition: background-color .5s, transform .5s;
 }
@@ -178,7 +178,7 @@
     appearance: none;
     width: 80%;
     text-align: center;
-    border-radius: 6px;
+    border-radius: 10px;
     border: 1px solid rgba(66, 69, 78, 0.445);
     background-color: white;
     box-shadow: inset 0px 0px 2px rgba(45, 45, 49, 0.637);
@@ -200,6 +200,8 @@
     resize: none;
     padding: 5px;
     height: 130px;
+    border-radius: 10px;
+    font-size: 1em;
     border: 1px solid rgba(66, 69, 78, 0.445);
     background-color: white;
     box-shadow: inset 0px 0px 2px rgba(45, 45, 49, 0.637);
@@ -209,7 +211,7 @@
     width: 90%;
     height: 40px;
     border: none;
-    border-radius: 20px;
+    border-radius: 10px;
     font-size: 1.01em;
     margin-left: 5%;
     background-color: black;
@@ -219,9 +221,182 @@
 
 .pop__up__container {
     position: absolute;
+    left: 50%;
+    top: 50%;
     width: 500px;
     height: 400px;
-    border: 1px solid black;
+    border: 1px solid rgba(6, 7, 7, 0.301);
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.301);
     background-color: white;
     z-index: 999;
+    transition: transform .5s;
+} 
+
+.pop__up__container.visible {
+    transform: translate(-50%, -50%) scale(1);
 }
+
+.pop__up__container.invisible {
+    transform: translate(-50%, -50%) scale(0); 
+}
+
+.exit__button__section {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    height: 50px;
+    padding-right: 12.5px;
+}
+
+.exit__button {
+    padding: 14px;
+    display: flex;
+    position: relative;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    border: none;
+    background-color: transparent;
+}
+
+.exit__button:hover .exit__button__line{
+    background-color: rgb(118, 134, 172);
+}
+
+.exit__button__line {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 20px;
+    height: 3px;
+    background-color: black;
+    transition: background-color .3s;
+}
+
+.exit__button__line:nth-child(1) {
+    transform: translate(-50%, -50%) rotate(45deg);
+}
+
+.exit__button__line:nth-child(2) {
+    transform: translate(-50%, -50%) rotate(-45deg);
+}
+
+.inputs__block {
+    width: 100%;
+    padding: 26px 24px 0 24px;
+}
+
+.input__label {
+    display: block;
+    margin-bottom: 5px;
+}
+
+.first__input__block, .second__input__block {
+    display: flex;
+    width: 100%;
+    height: 46px;
+    border: 1px solid rgba(64, 66, 71, 0.589);
+    border-radius: 10px;
+}
+
+.first__input__block {
+    margin-bottom: 20px;
+}
+
+.first__icon__block, .second__icon__block {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 6px;
+    height: 100%;
+    width: 12%;
+    border-radius: 20px 0px 0px 20px;
+}
+
+.first__icon, .second__icon {
+    object-fit: cover;
+}
+
+.first__input, .second__input {
+    width: 88%;
+    height: 100%;
+    padding: 10px;
+    border-radius: 0px 20px 20px 0px;
+    outline: 0;
+    font-size: 1.1em;
+    border: none;
+}
+
+.confirmation__area {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 56px; 
+    margin-top: 46px;
+}
+
+.confirm__entry__button, .confirm__create__button {
+    width: 46%;
+    height: 100%;
+    border-radius: 10px;
+    border: none;
+    color: white;
+    font-size: 1.1em;
+    background-color:rgb(0, 0, 0);
+    transition: background-color .5s, transform .5s;
+}
+
+.confirm__entry__button:hover, .confirm__create__button:hover {
+    cursor: pointer;
+    background-color: rgb(32, 30, 46);
+    transform: scale(1.009);
+    box-shadow: 0px 0px 4px rgba(32, 32, 34, 0.555);
+}
+
+.message__buttons__separator {
+    width: auto;
+    font-size: 1.1em;
+    color: gray;
+}
+
+/* #404767 */
+
+.error__message__block {
+    display: flex;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 30%;
+    max-width: 365px;
+    height: 150px; 
+}
+
+.cat__icon__block {
+    height: 100%;
+    width: 40%;
+}
+
+.error__content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    gap: 5%;
+    width: 60%;
+    height: 100%; 
+    padding-left: 20px;
+}
+
+.error__title {
+    color: rgb(43, 50, 80);
+    font-size: 1.8em;
+}
+
+.error__text {
+    color: rgb(112, 128, 133);
+    font-size: 0.98em;
+}
+
