--- a/view/src/styles/common/popups/BigCardPopUp.module.css
+++ b/view/src/styles/common/popups/BigCardPopUp.module.css
@@ -167,6 +167,7 @@
     word-break: break-word;
     height: 68%;
     color: white;
+    background-color: transparent;
     padding: 0px 20px 20px 20px;
     overflow-y: auto;
     outline: 0;
