--- a/view/src/styles/common/popups/BigCardPopUp.module.css
+++ b/view/src/styles/common/popups/BigCardPopUp.module.css
@@ -29,56 +29,6 @@
     border-radius: 10px 10px 0px 0px;
 }
 
-.big__card__close__block {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    width: 100%;
-    height: 34%;
-}
-
-.close__button {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 30px;
-    width: 30px;
-    border: none;
-    background-color: transparent;
-    border-radius: 50%;
-    margin-right: 4px;
-    transition: background-color .5s;
-}
-
-.close__button:hover {
-    background-color: rgb(63, 66, 71);
-}
-
-.close__button__line {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 80%;
-    height: 4px;
-    border-radius: 5px;
-    background-color: rgb(227, 255, 255);
-    transition: background-color .5s;
-}
-
-.close__button__line:first-child {
-    transform: translate(-50%, -50%) rotate(45deg);
-}
-
-.close__button__line:last-child {
-    transform: translate(-50%, -50%) rotate(-45deg);
-}
-
-.close__button:hover .close__button__line:first-child, .close__button:hover .close__button__line:last-child{
-    background-color: rgb(130, 140, 172);
-}
-
 .big__card__info__block {
     display: flex;
     justify-content: space-between;
@@ -127,6 +77,18 @@
     height: 18px;
     border: 0.2px solid rgba(255, 255, 255, 0.541);
     border-radius: 10px;
+}
+
+.big__card__info__priority__colorization.low {
+    background-image: linear-gradient(to right, green, yellow);
+}
+
+.big__card__info__priority__colorization.medium {
+    background-image: linear-gradient(to right, yellow, rgb(255, 136, 0));
+}
+
+.big__card__info__priority__colorization.high {
+    background-image: linear-gradient(to right, rgb(255, 153, 0), rgb(223, 7, 7));
 }
 
 .big__card__buttons__block {
