--- a/view/src/styles/common/buttons/ActionButton.module.css
+++ b/view/src/styles/common/buttons/ActionButton.module.css
@@ -56,3 +56,18 @@
         height: 60px;
     }
 }
+
+@media only screen and (max-width: 765px) {
+    .action__button.search--card {
+        height: 40px;
+        width: 40%;
+        font-size: 1.01em;
+    }
+
+    .action__button.add--card {
+        width: 90%;
+        height: 50px;
+        font-size: 1.01em;
+        margin-left: 5%;
+    }
+}
