--- a/view/src/styles/common/popups/DeleteCardPopUp.module.css
+++ b/view/src/styles/common/popups/DeleteCardPopUp.module.css
@@ -7,6 +7,7 @@
     left: 50%;
     z-index: 99999;
     background-color: white;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.575);
     transition: transform .5s;
 }
 
