--- a/view/src/styles/internal/main/content/GroupContent.module.css
+++ b/view/src/styles/internal/main/content/GroupContent.module.css
@@ -7,6 +7,14 @@
     margin-top: -20px;
 }
 
+.group__info__wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    width: 100%;
+    height: 70px;
+}
+
 .group__members__block {
     display: flex;
     gap: 0.7%;
@@ -34,11 +42,35 @@
     width: 100%;
 }
 
+.group__settings__button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 36px;
+    height: 36px;
+    border-radius: 10px;
+    background-color: black;
+    border: none;
+    transition: background-color .5s, transform .5s;
+}
 
+.group__settings__button:hover {
+    cursor: pointer;
+    background-color:rgb(32, 30, 46);
+    transform: scale(1.009);
+    box-shadow: 0px 0px 4px rgba(32, 32, 34, 0.555);
+}
+
+.settings__icon {
+    width: 23px;
+    height: 23px;
+    object-fit: cover;
+}
 
 @media only screen and (max-width: 994px) and (min-width: 766px) {
     .group__members__block  {
         width: 65%;
+        margin-bottom: 0px;
     }
     
 }
@@ -46,6 +78,11 @@
 @media only screen and (max-width: 765px) {
     .group__name {
         display: block;
+        width: 96%;
+        text-align: center;
+        font-size: 1.4em;
+        color: rgb(56, 56, 77);
+        word-wrap: break-word;
     }
     
     .group__content__block {
@@ -54,7 +91,15 @@
         align-items: center;
     }
 
+    .group__info__wrapper {
+        flex-direction: column;
+        height: auto;
+        align-items: flex-start;
+        margin-bottom: 20px;
+    }
+
     .group__members__block {
-        display: none;
+        width: 100%;
+        margin-bottom: 20px;
     }
 }
