--- a/view/src/styles/internal/main/functionalities/Functionalities.module.css
+++ b/view/src/styles/internal/main/functionalities/Functionalities.module.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     min-width: 200px;
     width: 24%;
+    border-radius: 10px;
     margin-left: 4%;
 }
 
@@ -223,26 +224,30 @@
     .funct__container {
         width: 100%;
         height: auto;
+        justify-content: flex-start;
         margin: 0px 0px 40px 0px;
-        gap: 14%;
+        background-image: linear-gradient(to right bottom, rgb(227, 234, 240), rgb(156, 169, 177));
+        box-shadow: 0px 0px 6px rgb(123, 124, 138);
+        padding: 0px;
     }
 
     .search__card__container {
         background-image: none;
         box-shadow: none;
         flex-direction: row;
-        padding: 0;
+        padding: 15px;
+        border-color: rgba(90, 90, 112, 0.226);
+        border-style: solid;
+        border-width: 0.1px 0px;
+        border-radius: 0px;
         gap: 3%;
         order: 2;
         height: auto;
     }
 
-    .search__button {
-        width: 20%;
-    }
-
     .show__add__card__button {
         display: flex;
+        margin: 15px;
     }
 
     .add__card__container {
@@ -250,7 +255,7 @@
         left: 50%;
         top: 50%;
         width: 80%;
-        height: 400px;
+        height: 420px;
         z-index: 99999;
         gap: 6%;
         order: 4;
@@ -276,7 +281,7 @@
 
     .new__card__info {
         flex-direction: column;
-        height: 26%;
+        height: 20%;
         margin-top: -18px;
     }
 
@@ -311,9 +316,10 @@
     .group__token__block {
         background-image: none;
         box-shadow: none;
-        padding: 0;
-        height: 40px;
-        margin-bottom: 70px;
+        padding: 15px;
+        height: 68px;
+        margin-bottom: 0px;
+        border-radius: 0px;
         order: 1;
     }
 }
