--- a/view/src/styles/common/popups/GroupInfoPopUp.module.css
+++ b/view/src/styles/common/popups/GroupInfoPopUp.module.css
@@ -4,7 +4,8 @@
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 999999;
-    width: 400px;
+    max-width: 400px;
+    width: 98%;
     height: 500px;
     background-color: white;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.575);
@@ -17,4 +18,40 @@
 
 .group__info__pop__up__container.invisible {
     transform: translate(-50%, -50%) scale(0);
+}
+
+.group__info__wrapper {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    height: 74%;
+    gap: 10%;
+    border-color: rgba(34, 33, 39, 0.158);
+    border-style: solid;
+    border-width: 0.1px 0px;
+}
+
+.group__name, .group__creation, .group__participants__number, .group__administrators__number {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.label {
+    color: gray;
+}
+
+.data {
+    font-size: 1.2em;
+    color: rgb(32, 32, 37);
+    word-wrap: break-word;
+    width: 100%;
+}
+
+.buttons__wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0px 20px;
+    height: 18%;
 }
