--- a/view/src/styles/about/About.module.css
+++ b/view/src/styles/about/About.module.css
@@ -3,8 +3,8 @@
     align-items: center;
     justify-content: center;
     width: 100%;   
-    padding: 200px;
-    background-image: linear-gradient(to top, rgb(233, 205, 187), white);
+    min-height: 870px;
+    background-image: linear-gradient(to bottom, rgb(255, 255, 255), rgb(212, 212, 212));
 }   
 
 .main__content {
@@ -13,21 +13,21 @@
     flex-direction: column;
     width: 90%;
     max-width: 400px;
-    height: 500px;
+    min-height: 560px;
+    height: auto;
     padding: 20px;
     background-color: white;
-    border: 0.1px solid rgba(0, 0, 0, 0.116);
-    box-shadow: 1px 1px 1px rgba(29, 29, 29, 0.719);
+    box-shadow: 0px 0px 2px rgba(100, 111, 136, 0.548);
 }
 
 .about__title {
-    color: #dd3c0b;
+    color: #313953;
 }
 
 .separation__line{
     width: 100%;
     margin: 20px 0;
-    background-color: rgba(172, 36, 5, 0.733);
+    background-color: rgba(67, 69, 95, 0.733);
     height: 2px;
     border: none;
 }
