--- a/view/src/styles/common/header/Menu.module.css
+++ b/view/src/styles/common/header/Menu.module.css
@@ -22,10 +22,31 @@
 }
 
 .header__menu__button__line {
+    cursor: pointer;
     width: 50%;
     height: 3px;
-    transition: transform .5s;
+    border-radius: 5px;
+    transition: background-color .5s, transform .5s;
+}
+
+.header__menu__navigation.in--origin .header__menu__button__line {
+    background-color: white;
+}
+
+.header__menu__navigation.aboutpage.in--origin .header__menu__button__line {
+    background-color: black;
+}
+
+.header__menu__navigation.out--origin .header__menu__button__line {
     background-color: rgb(0, 0, 0);
+}
+
+.header__menu__button:hover {
+    cursor: pointer;
+}
+
+.header__menu__button:hover .header__menu__button__line {
+    background-color: rgb(43, 43, 71);
 }
 
 .header__menu__items {
@@ -145,6 +166,7 @@
     }
 
     .header__menu__button.openned .header__menu__button__line {
+        background-color: black;
         position: absolute;
     }
 
@@ -166,6 +188,10 @@
         transform: translate(-50%, -50%) rotate(225deg);
     }
 
+    .header__menu__button.openned:hover .header__menu__button__line {
+        background-color: rgb(43, 43, 71);
+    }
+
     .header__menu__item {
         width: 100%;
         height: 10%;
@@ -178,7 +204,7 @@
     }
 
     .header__menu__item:hover {
-        color:rgb(255, 60, 0);
+        color:rgb(72, 78, 94);
         background-color: rgb(241, 240, 240);
     }
 
@@ -192,4 +218,5 @@
         max-width: 80%;
         margin: auto 0 12% 0;
     }
+
 }
