--- a/frontend/view/src/styles/common/buttons/CloseButton.module.css
+++ b/frontend/view/src/styles/common/buttons/CloseButton.module.css
@@ -56,7 +56,7 @@
 }
 
 .close__button__block.big--card > .close__button:hover {
-    background-color: rgb(71, 63, 68);
+    background-color: rgba(46, 46, 48, 0.658);
 }
 
 .close__button__line {
@@ -70,12 +70,16 @@
     transition: background-color .5s;
 }
 
+.close__button__block.big--card .close__button__line {
+    background-color: rgb(255, 255, 255) !important;
+}
+
 .close__button:hover .close__button__line {
     background-color: rgb(48, 45, 85);
 }
 
 .close__button__block.big--card > .close__button:hover .close__button__line {
-    background-color: rgb(130, 140, 172);
+    background-color: rgb(130, 140, 172) !important;
 }
 
 .close__button__line:first-child {
