--- a/frontend/view/src/styles/common/popups/BigCardPopUp.module.css
+++ b/frontend/view/src/styles/common/popups/BigCardPopUp.module.css
@@ -9,11 +9,11 @@
     width: 98%;
     max-width: 750px;
     height: 600px;
-    background-color: rgb(48, 50, 54);
+    background-color: rgb(241, 241, 241);
     border-radius: 10px;
     transition: transform .5s;
 }
-
+ 
 .big__card__container.visible {
     transform: translate(-50%, -50%) scale(1);
 }
@@ -25,7 +25,7 @@
 .big__card__header {
     height: 25%;
     width: 100%;
-    background-color: rgb(64, 66, 73);
+    background-image: linear-gradient(to top right, rgb(32, 30, 46), rgb(21, 20, 27), rgb(17, 17, 22));
     border-radius: 10px 10px 0px 0px;
 }
 
@@ -109,8 +109,8 @@
     gap: 2%;
     width: 15%;
     color: white;
-    background-color: rgb(64, 66, 73);
-    border: 0.2px solid rgba(87, 96, 104, 0.479);
+    background-color: transparent;
+    border: 0.2px solid rgba(44, 55, 65, 0.774);
     border-radius: 4px;
     transition: background-color .5s;
 }
@@ -128,7 +128,7 @@
 .big__card__content {
     word-break: break-word;
     height: 68%;
-    color: white;
+    color: black;
     background-color: transparent;
     padding: 0px 20px 20px 20px;
     overflow-y: auto;
